--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
   {% include space-time.js %}
   </script>
 
+  <link rel="stylesheet" href="/css/color.css" />
+  <link rel="stylesheet" href="/css/type.css" />
   <link rel="stylesheet" href="/css/elements.css" />
   <link rel="stylesheet" href="/css/button.css" />
   <link rel="stylesheet" href="/css/nav.css" />
