--- a/css/button.css
+++ b/css/button.css
@@ -1,10 +1,6 @@
 
-  ul.action {
-    margin-top: 1.4em;
-  }
-  h2 + ul.action {
-    margin-top: 0.7em;
-  }
+  /* =Action
+  ----------------------------------------------- */
   .action a {
     display: inline-block;
     padding: 0.7em 1em;
@@ -41,6 +37,13 @@
     .action a:focus {
       background-color: rgb(0, 115, 175);
     }
+  }
+
+  ul.action {
+    margin-top: 1.4em;
+  }
+  h2 + ul.action {
+    margin-top: 0.7em;
   }
 
   .action li {
