--- a/css/button.css
+++ b/css/button.css
@@ -42,6 +42,12 @@
   ul.action {
     margin-top: 1.4em;
   }
+  ul.action,
+  ul.action li {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+  }
   h2 + ul.action {
     margin-top: 0.7em;
   }
