--- a/css/banner-type.css
+++ b/css/banner-type.css
@@ -2,33 +2,34 @@
 
   /* =Type
   ----------------------------------------------- */
-  .banner h2 {
+  .banner h1,
+  .banner h2,
+  .banner h3 {
     margin-top: 0;
   }
-  .banner div h1 {
-    margin-top: 0;
-    font-size: 2em;
+
+  .banner h1,
+  .banner h3 {
+    font-size: 1.75em;
   }
+
+  /* SHIM: Make the banner type larger on medium size screens, but only on the project details page. (so no “h3” selector) */
   @media (min-width: 22em) {
-    .banner div h1 {
+    .banner h1 {
       font-size: 3em;
     }
   }
 
-  .projects .banner h3,
-  .banner.next h1 {
-    font-size: 1.75em;
-  }
-
   @media (min-width: 45em) {
-    .projects .banner h3,
-    .banner div h1 {
+    .banner h1,
+    .banner h3 {
       font-size: 5vmax;
     }
   }
+
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
-    .projects .banner h3,
-    .banner.next div h1 {
+    .banner h3,
+    .banner.next h1 {
       /* --wave-outline-light-blue */
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
       background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
@@ -39,51 +40,51 @@
 
       padding: 0 0.35em 0.35em;
     }
-    .projects .banner h3 + p,
-    .banner.next div h1 + p {
+    .banner h3 + p,
+    .banner.next div p {
       margin-top: 0;
       padding: 0.35em 0.7em 0;
     }
     @media (min-width: 45em) {
-      .projects .banner h3 + p,
-      .banner.next div h1 + p {
+      .banner h3 + p,
+      .banner.next div p {
         padding: 0.35em 1.4vmax 0; /* 4vmax * 0.35 */
       }
     }
   }
 
 
-  .projects .banner div h3,
+  .projects .banner h3,
   .projects .banner div p,
-  .banner.next div h1,
-  .banner.next div h1 + p {
+  .banner.next h1,
+  .banner.next div p {
     transition: background-color 0.2s, color 0.2s;
   }
-  .projects .banner:active div h3,
+  .projects .banner:active h3,
   .projects .banner:active div p,
-  .projects .banner:focus div h3,
+  .projects .banner:focus h3,
   .projects .banner:focus div p,
   .projects .banner div:hover h3,
   .projects .banner div:hover p,
-  .banner.next:active div h1,
-  .banner.next:active div h1 + p,
-  .banner.next:focus div h1,
-  .banner.next:focus div h1 + p,
+  .banner.next:active h1,
+  .banner.next:active div p,
+  .banner.next:focus h1,
+  .banner.next:focus div p,
   .banner.next div:hover h1,
-  .banner.next div:hover h1 + p,
-  .banner.next div:hover ~ div h1,
-  .banner.next div:hover ~ div h1 + p {
+  .banner.next div:hover p,
+  .banner.next div:hover ~ h1,
+  .banner.next div:hover ~ div p {
     background-color: rgb(40, 155, 215);
   }
 
-  .projects .banner h3,
-  .banner.next div + div h1 {
+  .banner h3,
+  .banner.next h1 {
     text-transform: none;
     font-variant: normal;
   }
   @media (min-width: 45em) {
-    .projects .banner h3,
-    .banner.next div + div h1 {
+    .banner h3,
+    .banner.next h1 {
       font-size: 4vmax;
     }
   }
@@ -116,8 +117,23 @@
       background-position: bottom;
       background-size: 1em auto;
     }
+    /*
     .banner h3:last-child {
       padding-bottom: 1.05em !important;
       background-position: 50% 65% !important;
     }
+    */
+  }
+
+
+
+  /* =Banner (Project Details)
+  ----------------------------------------------- */
+  .ahoy + .banner h1,
+  .ahoy + .banner div p {
+    padding-left: 0 !important;
+  }
+  .ahoy + .banner h1,
+  .banner.next div:first-child h2 {
+    background-image: none !important;
   }
