--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="/css/layout.css" />
   <link rel="stylesheet" href="/css/banner.css" />
   <link rel="stylesheet" href="/css/banner-type.css" />
+  <link rel="stylesheet" href="/css/banner-credit.css" />
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/sky.css" />
 
