--- a/css/banner.css
+++ b/css/banner.css
@@ -142,16 +142,11 @@
     top: 10%;
     bottom: auto;
   }
-  .banner.next div + div {
-    transition: background-color 0.2s, color 0.2s;
-    background-color: transparent;
-    color: white;
-  }
   @media (min-width: 45em) {
     .banner.next div:first-child {
       top: 25%;
     }
-    .banner.next div + div {
+    .banner.next .banner__title-container {
       top: 25%;
       bottom: auto;
       left: 50%;
@@ -161,45 +156,3 @@
       background: linear-gradient(to bottom left, rgba(25, 25, 25, 0.75), rgba(25, 25, 25, 0.5) 66.666%, rgba(25, 25, 25, 0.25));
     }
   }
-
-
-  /* =Credit
-  ----------------------------------------------- */
-  .banner .credit {
-    position: absolute;
-    top: auto;
-    left: auto;
-    bottom: 0;
-    right: 0;
-    background: rgb(51, 51, 51);
-    background: rgba(51, 51, 51, 0.85);
-    background: transparent;
-    color: rgb(252, 252, 249); /* @snow */
-    margin: 0;
-    font-size: 0.75em;
-    padding: 0;
-  }
-  .banner .credit a {
-    display: block;
-    padding: 0.7em 1.4em;
-    color: inherit;
-    background-image: none;
-    text-decoration: none;
-  }
-  .banner .credit a span {
-    text-decoration: underline;
-  }
-  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
-    .banner .credit a span {
-      text-decoration: none;
-
-      /* --wave-outline-light-blue */
-      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
-      background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
-
-      background-repeat: repeat-x;
-      background-position: bottom;
-      background-size: 1em auto;
-    }
-  }
-
